--- a/mini_asg_2/assig_2_answer.tex
+++ b/mini_asg_2/assig_2_answer.tex
@@ -2,7 +2,7 @@
 \usepackage{amsmath, amssymb}
 
 \title{ECE 712: Mini Assignment 2}
-\author{Your Name}
+\author{Dai, Jiatao}
 \date{}
 
 \begin{document}
@@ -31,7 +31,7 @@ b \in R(A).
 \]
 If $b \notin R(A)$, then no exact solution exists.
 
-\subsection*{Structure of the solution}
+\subsection*{Description of the solution}
 Assume $b \in R(A)$. Then there exists at least one solution $x_p$ such that
 \[
 A x_p = b.
@@ -46,7 +46,7 @@ Therefore, every solution can be written as
 x = x_p + z, \quad z \in N(A).
 \]
 
-\subsection*{Complete description}
+\subsection*{Final Answer}
 The system has a solution if and only if $b \in R(A)$.  
 If a solution exists, then the general solution is
 \[
@@ -54,10 +54,8 @@ x = x_p + N(A),
 \]
 where $x_p$ is any particular solution and $N(A)$ is the null space of $A$.
 
-\subsection*{Remarks}
-\begin{itemize}
-    \item If $A$ has full column rank ($\text{rank}(A) = n$), then $N(A) = \{0\}$ and the solution is unique.
-    \item If $A$ is rank-deficient, then $N(A)$ has nonzero dimension and the solution set forms an affine subspace.
-\end{itemize}
+\noindent If $A$ has full column rank ($\text{rank}(A) = n$), then $N(A) = \{0\}$ and the solution is unique.
+
+\noindent If $A$ is rank-deficient, then $N(A)$ has nonzero dimension and the solution set forms an affine subspace.
 
 \end{document}
