--- a/mini_asg_2/assig_2_answer.tex
+++ b/mini_asg_2/assig_2_answer.tex
@@ -56,6 +56,6 @@ where $x_p$ is any particular solution and $N(A)$ is the null space of $A$.
 
 \noindent If $A$ has full column rank ($\text{rank}(A) = n$), then $N(A) = \{0\}$ and the solution is unique.
 
-\noindent If $A$ is rank-deficient, then $N(A)$ has nonzero dimension and the solution set forms an affine subspace.
+\noindent If $A$ is rank-deficient, then $N(A)$ has nonzero dimension and many solutions.
 
 \end{document}
