--- a/mini_assg_3/712_mini_assg3_DaiJiato.tex
+++ b/mini_assg_3/712_mini_assg3_DaiJiato.tex
@@ -110,7 +110,7 @@ Thus, $A_r^T$ is obtained by projecting $A^T$ onto the subspace
 \[
 \mathcal{S}_r = \mathrm{span}(V_1),
 \]
-which is called \textbf{the $r$-dimensional subspace defined by $U_1$, i.e. a subspace of R(A)}.
+which is like question 1, called \textbf{the $r$-dimensional subspace defined by $V_1$, i.e.\ a subspace of $\mathcal{R}(A^T)$}.
 If $r = \mathrm{rank}(A)$, then $\mathcal{S}_r = \mathcal{R}(A^T) = \mathcal{N}(A)^\perp$.
 
 \end{document}
